<resources>
    <string name="app_name">CapacitorCracker</string>
    <string name="voltage_hint">电压</string>
    <string name="volt">V</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="sixth">6th</string>
    <string name="relay_on">开了</string>
    <string name="relay_off">关了</string>
    <string name="fuck">Fuck this!</string>
    <string name="time_len_hint">新的通电时间</string>
    <string name="current_time_len">当前的通电时间：</string>
    <string name="set_it">彳亍</string>
    <string name="ms">ms</string>
    <string name="stop_fucking">不Fuck了</string>
    <string name="low_batt">🔋快🈚了</string>
    <string name="not_low_batt">🔋还🈶电</string>
    <string name="time_toooooo_long">时间太长了（最大65535ms）</string>
    <string name="success">好了</string>
    <string name="fail">不好</string>
    <string name="already_on">已经开了</string>
    <string name="invalid_relay_num">找不着这一个</string>
    <string name="timeout">设备没理你</string>
    <string name="foo">---</string>
</resources>